Fix lasl-trx json name
