# api/routes/wormscan/transactions/controller.go
@@ -29,7 +29,6 @@ func NewController(transactionsService *transactions.Service, logger *zap.Logger
 // @ID get-last-transactions
 // @Param timeSpan query string false "Time Span, default: 1h, examples: 30m, 1h, 1d, 2w, 3mo, 1y, all."
 // @Param sampleRate query string false "Sample Rate, default: 1m, examples: 30s, 1m, 1h, 1d, 2w, 3mo, 1y."
-// @Param cumulativeSum query boolean false "Cumulative Sum, fill empty values with cumulative sum, default: false, examples: true, false."
 // @Success 200 {object} []transactions.TransactionCountResult
 // @Failure 400
 // @Failure 500
@@ -43,12 +42,10 @@ func (c *Controller) GetLastTransactions(ctx *fiber.Ctx) error {
 	if err != nil {
 		return err
 	}
-	cumulativeSum, _ := middleware.ExtractCumulativeSum(ctx, c.logger)
 
 	q := &transactions.TransactionCountQuery{
-		TimeSpan:      timeSpan,
-		SampleRate:    sampleRate,
-		CumulativeSum: cumulativeSum,
+		TimeSpan:   timeSpan,
+		SampleRate: sampleRate,
 	}
 
 	// Get transaction count.
